--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.2.6.RELEASE</version>  <!-- 2.6.3 -->
+        <relativePath/>
     </parent>
     <groupId>com.example</groupId>
     <artifactId>refreshmyspring</artifactId>
@@ -15,11 +15,38 @@
     <description>RefreshMySpring</description>
     <properties>
         <java.version>11</java.version>
+        <spring.cloud-version>Hoxton.SR9</spring.cloud-version>
     </properties>
+
+
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud-version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+
+
+
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
 
@@ -56,6 +83,8 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
+
 
     <build>
         <plugins>
