--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=8080
 
+feign.client.config.spacestation.request-interceptors[0]=com.example.refreshmyspring.config.SpaceStationClientInterceptor
+feign.client.config.spacestation.logger-level=headers
+feign.client.config.default.logger-level=headers
